// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordForget passwordForgetLink should render a link to the forgot password component  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "Forgot Password?",
      "className": "password-forget-link",
      "replace": false,
      "to": "/pw-forget",
    },
    "ref": null,
    "rendered": "Forgot Password?",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "Forgot Password?",
        "className": "password-forget-link",
        "replace": false,
        "to": "/pw-forget",
      },
      "ref": null,
      "rendered": "Forgot Password?",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`PasswordForget should matchSnapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PasswordForgetPage />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
>
        <form
                className="form"
                onSubmit={[Function]}
        >
                <input
                        className="password-forget"
                        name="email"
                        onChange={[Function]}
                        placeholder="Email Address"
                        type="email"
                        value=""
                />
                <button
                        className="button"
                        disabled={true}
                        type="submit"
                >
                        Reset My Password
                </button>
        </form>
</div>,
      "className": "page",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="form"
          onSubmit={[Function]}
>
          <input
                    className="password-forget"
                    name="email"
                    onChange={[Function]}
                    placeholder="Email Address"
                    type="email"
                    value=""
          />
          <button
                    className="button"
                    disabled={true}
                    type="submit"
          >
                    Reset My Password
          </button>
</form>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="password-forget"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              type="email"
              value=""
/>,
            <button
              className="button"
              disabled={true}
              type="submit"
>
              Reset My Password
</button>,
            null,
          ],
          "className": "form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "password-forget",
              "name": "email",
              "onChange": [Function],
              "placeholder": "Email Address",
              "type": "email",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Reset My Password",
              "className": "button",
              "disabled": true,
              "type": "submit",
            },
            "ref": null,
            "rendered": "Reset My Password",
            "type": "button",
          },
          null,
        ],
        "type": "form",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
>
          <form
                    className="form"
                    onSubmit={[Function]}
          >
                    <input
                              className="password-forget"
                              name="email"
                              onChange={[Function]}
                              placeholder="Email Address"
                              type="email"
                              value=""
                    />
                    <button
                              className="button"
                              disabled={true}
                              type="submit"
                    >
                              Reset My Password
                    </button>
          </form>
</div>,
        "className": "page",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <form
            className="form"
            onSubmit={[Function]}
>
            <input
                        className="password-forget"
                        name="email"
                        onChange={[Function]}
                        placeholder="Email Address"
                        type="email"
                        value=""
            />
            <button
                        className="button"
                        disabled={true}
                        type="submit"
            >
                        Reset My Password
            </button>
</form>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="password-forget"
                name="email"
                onChange={[Function]}
                placeholder="Email Address"
                type="email"
                value=""
/>,
              <button
                className="button"
                disabled={true}
                type="submit"
>
                Reset My Password
</button>,
              null,
            ],
            "className": "form",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "password-forget",
                "name": "email",
                "onChange": [Function],
                "placeholder": "Email Address",
                "type": "email",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Reset My Password",
                "className": "button",
                "disabled": true,
                "type": "submit",
              },
              "ref": null,
              "rendered": "Reset My Password",
              "type": "button",
            },
            null,
          ],
          "type": "form",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
